--- a/NorthWind-APIExample/appsettings.json
+++ b/NorthWind-APIExample/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
