Scaffolded and got models and NorthwindContext

--- a/NorthWind-APIExample/appsettings.json
+++ b/NorthWind-APIExample/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;"
+    "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;Encrypt=False;"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
